Mon Sep 18 19:10:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Slightly more accurate malloc/realloc implementation

Mon Sep 18 18:35:32 BST 2000 Olly Betts

	* Many tests in apitest changed to use TEST_* macros.

Mon Sep 18 18:23:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Can now add checking for memory leaks in testsuite via
	  LD_PRELOAD of malloccheck.so.  Seems to have a few problems
	  at the moment, though.

	* Added a test for the malloc tracking to internaltest.

Mon Sep 18 17:38:38 BST 2000 Olly Betts

	* All api tests now have a number suffix.

	* apitest_parser.pm cope with tests being declared "static".
	
Mon Sep 18 17:19:32 BST 2000 Olly Betts

	* Efficiency tweak to max_or_terms comparator - don't call
	  get_maxweight() if get_termfreq() is zero.

	* More minor rearrangments in preparation for merging LocalMatch and
	  MultiMatch.

Mon Sep 18 15:43:46 BST 2000 Olly Betts

	* A testsuite programs asked to run test "foo" will now run tests
	  "foo1", "foo2", ... if they exist.

Mon Sep 18 14:36:13 BST 2000 Olly Betts

	* Implemented API side of OmDatabase::positionlist_{begin,end} -
	  still needs support in backends.
 
Mon Sep 18 14:03:58 BST 2000 Olly Betts

	* Sorted out wrinkles with geacinclude.sh.

Mon Sep 18 13:02:36 BST 2000 Olly Betts

	* Added tests for skip_to on {Post,Term}ListIterator.

Mon Sep 18 12:59:39 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Keep a count of the skipped tests.

Mon Sep 18 12:31:05 BST 2000 Olly Betts

	* acinclude.m4 generation moved from buildall to a separate script
	  so that the Makefile can regenerate acinclude.m4 if necessary.

	* Use AC_CONFIG_AUX_DIR to reduce the clutter in the top level
	  directory.

Mon Sep 18 12:26:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Tests in the testsuite can now be skipped, and avoid being
	  counted as either a pass or a fail.
	
	* Leak detection code partly separated out.
